logs/qcloudcli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jmespath'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qcloudcli'...
Listing './lib/python3.5/site-packages/qcloudcli/advance'...
Listing './lib/python3.5/site-packages/qcloudcli/colorama'...
Listing './lib/python3.5/site-packages/qcloudcli-1.9.11.egg-info'...
Listing './lib/python3.5/site-packages/qcloudsdkaccount'...
Listing './lib/python3.5/site-packages/qcloudsdkapigateway'...
Listing './lib/python3.5/site-packages/qcloudsdkbatch'...
Listing './lib/python3.5/site-packages/qcloudsdkbgpip'...
Listing './lib/python3.5/site-packages/qcloudsdkbill'...
Listing './lib/python3.5/site-packages/qcloudsdkbm'...
Listing './lib/python3.5/site-packages/qcloudsdkbmeip'...
Listing './lib/python3.5/site-packages/qcloudsdkbmlb'...
Listing './lib/python3.5/site-packages/qcloudsdkbmvpc'...
Listing './lib/python3.5/site-packages/qcloudsdkcam'...
Listing './lib/python3.5/site-packages/qcloudsdkcbs'...
Listing './lib/python3.5/site-packages/qcloudsdkcdb'...
Listing './lib/python3.5/site-packages/qcloudsdkcdn'...
Listing './lib/python3.5/site-packages/qcloudsdkcmem'...
Listing './lib/python3.5/site-packages/qcloudsdkcns'...
Listing './lib/python3.5/site-packages/qcloudsdkcore'...
Listing './lib/python3.5/site-packages/qcloudsdkcsg'...
Listing './lib/python3.5/site-packages/qcloudsdkcvm'...
Listing './lib/python3.5/site-packages/qcloudsdkcvm/2017-03-12'...
Listing './lib/python3.5/site-packages/qcloudsdkdayu'...
Listing './lib/python3.5/site-packages/qcloudsdkdfw'...
Listing './lib/python3.5/site-packages/qcloudsdkds'...
Listing './lib/python3.5/site-packages/qcloudsdkdsa'...
Listing './lib/python3.5/site-packages/qcloudsdkeip'...
Listing './lib/python3.5/site-packages/qcloudsdkfeecenter'...
Listing './lib/python3.5/site-packages/qcloudsdkhelix'...
Listing './lib/python3.5/site-packages/qcloudsdkiiot'...
Listing './lib/python3.5/site-packages/qcloudsdkimage'...
Listing './lib/python3.5/site-packages/qcloudsdkimage/2017-03-12'...
Listing './lib/python3.5/site-packages/qcloudsdkiothub'...
Listing './lib/python3.5/site-packages/qcloudsdklb'...
Listing './lib/python3.5/site-packages/qcloudsdklive'...
Listing './lib/python3.5/site-packages/qcloudsdkmarket'...
Listing './lib/python3.5/site-packages/qcloudsdkmonitor'...
Listing './lib/python3.5/site-packages/qcloudsdkmqiot'...
Listing './lib/python3.5/site-packages/qcloudsdkopc'...
Listing './lib/python3.5/site-packages/qcloudsdkopen'...
Listing './lib/python3.5/site-packages/qcloudsdkra'...
Listing './lib/python3.5/site-packages/qcloudsdkredis'...
Listing './lib/python3.5/site-packages/qcloudsdkscaling'...
Listing './lib/python3.5/site-packages/qcloudsdkscf'...
Listing './lib/python3.5/site-packages/qcloudsdksnapshot'...
Listing './lib/python3.5/site-packages/qcloudsdksts'...
Listing './lib/python3.5/site-packages/qcloudsdktdsql'...
Listing './lib/python3.5/site-packages/qcloudsdkticket'...
Listing './lib/python3.5/site-packages/qcloudsdktidb'...
Listing './lib/python3.5/site-packages/qcloudsdktrade'...
Listing './lib/python3.5/site-packages/qcloudsdkvod'...
Compiling './lib/python3.5/site-packages/qcloudsdkvod/DescribeVodInfoRequest.py'...
***   File "./lib/python3.5/site-packages/qcloudsdkvod/DescribeVodInfoRequest.py", line 32
    def set_from(self, from):
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qcloudsdkvpc'...
Listing './lib/python3.5/site-packages/qcloudsdkwenzhi'...
Listing './lib/python3.5/site-packages/qcloudsdkyunsou'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
